bonus part updated successfully

--- a/index.html
+++ b/index.html
@@ -62,30 +62,32 @@
         <hr>
         <div class="mb-2">
             <h5>HOW DOES JAVASCRIPT WORK?</h5>
-            <p><span class="fw-bold fst-italic">Answare:</span> As JavaScript is an asynchronous single-threaded
-                language,
-                JavaScript executed one
-                command at a time with
-                a specific order. It is a client-side scripting language that runs on the browser. JavaScript runs
-                through JS engine i.e. V8 engine for Google Chrome in the browser. JS engine like V8 engine provides the
-                runtime environment in which JavaScript executes. V8 compiles JavaScript code into machine code, so that
-                computer can execute this program easily.</p>
+            <p><span class="fw-bold fst-italic me-2">Answare:</span>As JavaScript is an asynchronous single-threaded
+                language, JavaScript executed one command at a time with a specific order. It is a client-side scripting
+                language that runs on the browser. JavaScript runs through JS engine i.e. V8 engine for Google Chrome in
+                the browser. JS engine like V8 engine provides the runtime environment in which JavaScript executes. V8
+                compiles JavaScript code into machine code, so that computer can execute this program easily. As
+                JavaScript is a scripting type programming language, it executed tasks within runtime environment. </p>
         </div>
         <div class="mb-2">
             <h5>WHAT DOES JAVASCRIPT EVEN LOOP DO?</h5>
-            <p><span class="fw-bold fst-italic">Answare:</span> We know that JavaScript is combined of synchronous and
-                asynchronous events. The event queue is used in of synchronous part. As JavaScript has a single exaction
-                threaded, it completes tasks one after another. JavaScript makes callback queue or task queue to
-                execution. It is a queue of similar type callback functions. The browser APIs and promises work
-                asynchronously, but the functions in the stack, working synchronously.</p>
+            <p><span class="fw-bold fst-italic me-2">Answare:</span>We know that JavaScript is combined of synchronous
+                and
+                asynchronous events. The stack works sequentially, but the event queue works asynchronously. As
+                JavaScript has a single exaction threaded, it completes tasks one after another. JavaScript makes
+                callback queue or task queue to execution. It is a queue of similar type callback functions. The browser
+                APIs and promises work asynchronously, but the functions in the stack, working synchronously. So, the
+                functions in the stack executed one after another sequentially. </p>
         </div>
         <div class="mb-2">
             <h5>WHAT IS DIFFERENT BETWEEN LOCAL STORAGE AND SESSION STROAGE?</h5>
-            <p><span class="fw-bold fst-italic">Answare:</span> Local storage lasted until the user clear the cookies
-                from the browser. So, we can see local storage if the window has been closed and reopen it. On the other
-                hand session storage only lasted the duration of the window being open. We can not see if after the
-                window has been closed. For the same URL, we can not see session storage from another window. But local
-                storage of the same URL can see from another window.</p>
+            <p><span class="fw-bold fst-italic me-2">Answare:</span> Local storage lasted until the user clear the
+                cookies from the browser. So, we can see local storage if the window has been closed and reopen it. On
+                the other
+                hand session storage only lasted the duration of the window being open. We can’t see if after the window
+                has been closed. For the same URL, we can not see session storage from another window. But local storage
+                of the same URL can see from another window. So local storage lasting more than session storage. But,
+                both local storage and session storage can not transfer data to the server. </p>
         </div>
     </section>
     <footer></footer>
