final updated completed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>Reported posts</h1>
         </div>
     </main>
-
+    <!-- Bonus Part Start -->
     <section class="container">
         <hr>
         <div class="mb-2">
@@ -90,6 +90,7 @@
                 both local storage and session storage can not transfer data to the server. </p>
         </div>
     </section>
+    <!-- Bonus Part End -->
     <footer></footer>
 
     <!-- add javascript  file  -->
