--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 JavaScript is a scripting type programming language, it executed tasks within runtime environment. </p>
         </div>
         <div class="mb-2">
-            <h5>WHAT DOES JAVASCRIPT EVEN LOOP DO?</h5>
+            <h5>WHAT DOES JAVASCRIPT EVENT LOOPS DO?</h5>
             <p><span class="fw-bold fst-italic me-2">Answare:</span>We know that JavaScript is combined of synchronous
                 and
                 asynchronous events. The stack works sequentially, but the event queue works asynchronously. As
@@ -80,7 +80,7 @@
                 functions in the stack executed one after another sequentially. </p>
         </div>
         <div class="mb-2">
-            <h5>WHAT IS DIFFERENT BETWEEN LOCAL STORAGE AND SESSION STROAGE?</h5>
+            <h5>WHAT IS THE DIFFERENCE BETWEEN LOCAL STORAGE AND SESSION STORAGE?</h5>
             <p><span class="fw-bold fst-italic me-2">Answare:</span> Local storage lasted until the user clear the
                 cookies from the browser. So, we can see local storage if the window has been closed and reopen it. On
                 the other
